# esp32p4-ui-studio

./: 01_SPINE.md  02_SPINE-SEO.md  03-SPINE-SEO.md  README.md  READMEseo.md  START_FORGEUI_STUDIO.bat  START_FORGEUI_STUDIO_HIDDEN.vbs  STOP_FORGEUI_STUDIO.bat
docs/history/: docshistoryDEV_HISTORY.md
firmware/ForgeUI-One/: .gitignore  About.md  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_LICENSES.md  sdkconfig.defaults
firmware/ForgeUI-One/main/: 00_ForgeUI_Config.h  01_1Spine.md  01_FG_HMI.c  01_FG_HMI.h  01_FG_Runtime.c  01_FG_Runtime.h  02_UI_Home.c  02_UI_Home.h  05_FG_Icons.c  05_FG_Icons.h  14_UI_Header.c  14_UI_Header.h  15_UI_Keyboard.c  15_UI_Keyboard.h  16_UI_Style.c  16_UI_Style.h  20_RTC.c  20_RTC.h  30_Audio.c  30_Audio.h  30_WIFI.c  30_WIFI.h  40_SD.c  40_SD.h  90_Studio_Export.c  90_Studio_Export.h  About.md  CMakeLists.txt  idf_component.yml  main.c
firmware/ForgeUI-One/main/assets/icons/: fg_icon_sound_48px.c
firmware/ForgeUI-One/main/assets/uploads/: fg_upload_fg_icon_brightness_48px_34250efa.c  fg_upload_fg_icon_brightness_48px_342dba18.c  fg_upload_fg_icon_brightness_48px_3d825a15.c  fg_upload_fg_icon_brightness_48px_43fd7709.c  fg_upload_fg_icon_brightness_48px_62e39e99.c  fg_upload_fg_icon_brightness_48px_b2cf4a2c.c  fg_upload_fg_icon_brightness_48px_ca0bb0cb.c  fg_upload_fg_icon_brightness_48px_e6241709.c  fg_upload_fg_icon_brightness_48px_e9c40e41.c  fg_upload_test1_4a46b867.c  fg_upload_test1_631df5f2.c  fg_upload_test1_bca98662.c
studio/: 01_SPINE.md  02_SPINE-SEO.md  CONTRIBUTING.md  GETTING_STARTED FORGEUI_STUDIO.md  LICENSE  README.SEO.md  README.md  READMEseo.md  THIRD_PARTY_LICENSES.md  about.md  export-server.js  generated_90_Studio_Export.c  package-lock.json  package.json
studio/.github/: FUNDING.yml
studio/public/: index.html  site.webmanifest
studio/scripts/: export-to-forgeui-one.js
studio/src/: componentsList.ts  react-app-env.d.ts
studio/src/components/: CodePanel.tsx  Header.tsx  Metadata.tsx
tools/: clean-flash-p4.bat  flash-p4.bat
tools/lvgl/: LVGLImage.py
(+115 files in other folders)
